--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "node --test --loader ./scripts/ts-test-loader.mjs"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
