--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@libsql/client": "^0.17.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@vercel/speed-insights": "^1.3.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^17.2.3",
     "next": "16.0.10",
